<resources>
    <string name="app_name">Currency</string>
    <string name="lbl_update_failed">Update failed. Click this to try again.</string>
    <string name="lbl_update_count_down">Updating exchange rates in %s</string>
    <string name="lbl_select_currency">Select a currency</string>
    <string name="choose_a_currency">Choose a currency</string>
    <string name="cancel">Cancel</string>
    <string name="amount_input_placeholder">Amount</string>
    <string name="amount_input_content_description">Amount Input</string>
    <string name="success_icon_content_description">Success</string>
</resources>