...
        onSelect = onSelect
    )

    Row(
        modifier = Modifier
            .clickable(onClick = { showSelector = true }, role = Role.Button)
            .testTag("selectCurrencyButton")
    ) {
        Text(
            text = selectedCurrency ?: stringResource(R.string.lbl_select_currency),
            color = MaterialTheme.colors.primary
        )
        Icon(
...
